SERVER-102526 [v7.0] Update MozJS to ESR 128.8 (#33997)
GitOrigin-RevId: 8ba2ab368fb13c450b8718b524397217261511d6